Fixed line breaks not showing up in post content

--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -34,6 +34,10 @@ body {
 	text-decoration: underline;
 }
 
+.article-content {
+	word-wrap: break-word;
+}
+
 hr {
 	border-color: #ffffff;
 }
